Footer fix alignment on mobile

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -7,10 +7,10 @@
   --bg-darker-transparent: hsla(202deg 90% 90% / 65%);
   --bg-badge: #000;
   --border: hsl(237deg 100% 86%);
-  --button-text: rgba(255, 255, 255, 0.85);
+  --button-text: rgb(255 255 255 / 85%);
   --button-text-transparent: rgb(0 0 0 / 65%);
-  --text: rgba(0, 0, 0, 0.95);
-  --text-lighter: rgba(75, 75, 75, 0.95);
+  --text: rgb(0 0 0 / 95%);
+  --text-lighter: rgb(75 75 75 / 95%);
   --theme-error: rgb(199 13 6);
   --theme-error-transparent: rgba(199 13 6 / 75%);
   --theme-warning: #c9c900;
@@ -22,7 +22,6 @@
   --theme-transparent-vibrant: hsl(255deg 100% 81% / 54%);
   --theme-semi-transparent-vibrant: hsl(255deg 100% 81% / 75%);
   --theme-secondary: hsl(85deg 66.7% 55.3%);
-
   --rounded: 16px;
   --rounded-sm: 10px;
   --fonts-xl: 1.5rem;
@@ -72,7 +71,7 @@
     --bg: hsl(237.3deg 42.3% 30.6%);
     --bg-darker: hsl(237.3deg 42.3% 26.6%);
     --bg-lighter: hsl(237.3deg 42.3% 35.6%);
-    --bg-lighter-transparent: rgba(64, 67, 108, 0.5);
+    --bg-lighter-transparent: rgb(64 67 108 / 50%);
     --bg-darker-very-transparent: hsla(237.3deg 42.3% 26.6% / 50%);
     --bg-darker-transparent: hsla(237.3deg 42.3% 26.6% / 90%);
     --bg-badge: #000;
@@ -332,11 +331,6 @@ legend {
 article {
   padding-inline: var(--s-3);
   white-space: pre-line;
-}
-
-ol,
-ul {
-  padding: 0;
 }
 
 select {
